--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -48,6 +48,7 @@ function simple_cart_ready() {
   if (!!readCookie("checkout_initiated")) {simpleCart.empty(); eraseCookie("checkout_initiated");}
   toggleCourses();
 };
+simpleCart.cartHeaders = ["Name", "Quantity", "Increment", "Decrement", "Total", "Remove"];
 simpleCart.ready(simple_cart_ready)
 $(".itemRemove a").live("click",toggleCourses);
 </script>
