--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -32,7 +32,7 @@
         </div>
         <div class="enrolled-status" data-status="{{ course.enrolled_status }}"></div>
       </div>
-      <div class="price" ng-if="course.fee > 0">${{ course.fee*discount|number:0 }}</div>
+      <div class="price" ng-if="course.fee > 0">${{ course.fee }}</div>
       <div class="price" ng-if="course.fee == 0">FREE</div>
     </a>
   </div>
