random styling changes

--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -8,7 +8,7 @@ simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
     <div class="simpleCart_items"></div>
     <div class="checkout-box">
       <div class="subtotals"></div>
-      Final Total: <span class="simpleCart_finalTotal"></span>
+      Order Total: <span class="simpleCart_finalTotal"></span>
     </div>
   </div>
   <center><button class="btn btn-danger return_policy" onclick="$('.return_policy').toggle();return false;">View our return policy</button></center>
