--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -28,12 +28,6 @@
   </div>
   {% endif %}
   <div class="col-sm-4 col-md-5">
-    {% comment %}
-    <div class="subjects pull-right">
-      <b>Subject{{ course.subjects.all|pluralize:"s" }}</b>:
-      {{ course.subjects.all|join:", " }}
-    </div>
-    {% endcomment %}
     {% if course.branding %}
     {% thumbnail course.branding.image "620x100" as im %}
     <img src="{{ im.url }}" width="620" />
@@ -71,7 +65,6 @@
       {% endfor %}
     </div>
     {% endif %}
-    <h3>Can't make it to any of these sessions?</h3>
     <p class="notify_course">
       {% if notify_course %}
       <a href="{% url "clear_notification" "notify_course" request.user.id notify_course.id %}">
@@ -89,6 +82,7 @@
   <div class="col-xs-12 col-sm-4 col-md-3 pull-right" id="side">
     {% if not enrollment %}
     <div class="SessionList">
+      {% if course.active_sessions %}
       <h1 class="fee page_title">
         {% if course.fee %}
         ${{ course.fee }}
@@ -96,11 +90,10 @@
         Free
         {% endif %}
       </h1>
-      <h2>Choose a session:</h2>
+      {% endif %}
+      <h3>Upcoming Sessions:</h3>
       {% for session in course.active_sessions %}
       <div class="session well" id="s{{ session.id }}">
-        {{ session.classtime_set.count }} days with
-        <a href="{{ session.user.get_absolute_url }}">{{ session.user }}</a>
         <div class="dates">
           {% for classtime in session.classtime_set.all %}
           <div>{{ classtime|format_classtime }}</div>
@@ -109,7 +102,7 @@
         {% if session.full %}
         <b class="full">This session is full</b>
         {% else %}
-        </select>
+        with <a href="{{ session.user.get_absolute_url }}">{{ session.user }}</a>
         <button class="btn btn-primary add-to-cart" onclick="addClass({{ session.id }});">
           Add this session to cart</button>
         <button class="btn btn-primary view-cart"  data-toggle="modal" data-target="#cartModal">
