--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -193,7 +193,6 @@
 
 .SessionList {
   .RsvpLink, .EnrollLink {
-    margin-bottom: 20px;
     text-align: center;
   }
   .error { display: none; }
@@ -262,14 +261,6 @@
   max-width: 400px;
   margin: 0 auto;
 }
-
-#show_closed,[for=show_closed] { display: inline-block; margin-bottom: 5px; vertical-align: middle; }
-#show_closed { margin-left: 20px; margin-top: 0; }
-.related_classes {
-  padding-top: 20px;
-  .full { color: red; }
-}
-
 .has_notes span {
   border-bottom: dashed 1px;
   color: #0088cc;
@@ -352,7 +343,7 @@
 
 .SessionList {
   .add { display: inline-block; }
-  .view-cart, .add-to-cart {
+  .view-cart, .add-to-cart, .rsvp, .unrsvp {
     font-size: 12px;
     margin: 5px auto 0;
     padding: 3px 6px;
