fixing broken migrations

--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -169,8 +169,10 @@
 
 @media (max-width: @screen-xs-max) {
   .SessionList .fee {
+    float: right;
+    font-size: 24px;
+    line-height: 1;
     position: static;
-    text-align: right;
   }
 }
 
