--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -72,7 +72,7 @@
 
 // classes that are not scheduled
 .course_divider ~ div .course {
-  [data-status]:before { content: "details"; }
+  [data-status=Enroll]:before { content: "details"; }
 }
 
 .SessionList {
