--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -85,8 +85,10 @@
   }
   .session {
     margin-bottom: 10px;
+    position: relative;
     text-align: center;
     width: 100%;
+    .instructor-link { font-size: 2em; left: 5px; position: absolute; top: 0; }
     .full { color: @brand-danger; }
   }
   .add_session_box {
