--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -56,7 +56,7 @@ myApp.controller("DemoController", function($scope) {
   $scope.loadMore = function() {
     if (!$("#all_classes_tab").hasClass("active")) { return; }
     console.log('scrolling');
-    if ($scope._vui >= $scope.inactive_courses.length) {return }
+    if ($scope.inactive_courses.length && $scope._vui >= $scope.inactive_courses.length) {return }
     $scope._vsi = Math.min($scope.scheduled_courses.length+6,$scope.active_courses.length);
     $scope.scheduled_courses = $scope.active_courses.slice(0,$scope._vsi);
     if ($scope._vsi < $scope.active_courses.length) { return }
