--- a/txrx/templates/comments/_comment_replies.html
+++ b/txrx/templates/comments/_comment_replies.html
@@ -4,11 +4,13 @@
 {% if not comment.is_removed %}
 {% if request.user.is_authenticated %}
 <a class="comment_reply c{{ comment_id }}" href="{% url "comment-reply" comment.pk %}" title="reply">
-  <i class="icon-share-alt"></i>
-  Post Reply</a> |
+  <i class="fa fa-reply"></i> Post Reply</a> |
 <a class="comment_flag" href="{% url "comments-flag" comment.pk %}" title="flag">
-  <i class="icon-flag"></i>
-  Flag</a>
+  <i class="fa fa-flag"></i> Flag</a>
+{% if request.user.is_superuser %}
+| <a class="comment_delete" href="/admin/mptt_comments/mpttcomment/{{ comment.pk }}/delete/">
+  <i class="fa fa-times"></i> Delete</a>
+{% endif %}
 {% else %}
 <a href="/accounts/login/?next={{ request.path|urlencode }}#c{{ comment.pk }}">Login to reply to this comment</a>
 {% endif %}
