--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -24,7 +24,7 @@ function setHiddenFields(that) {
 <br />
 <div id="memberships" class="row">
   {% for group in groups %}
-  <div class="col-lg-4 {% if not forloop.last %}col-sm-6{% endif %}">
+  <div class="{% if forloop.first %}col-lg-offset-2 {% endif %}col-lg-4 col-sm-6">
     {% if groups|length != 1 %}<h2>{{ group }} Memberships:</h2>{% endif %}
     {% for m in group.active_memberships %}
     <span class="well membership">
