--- a/txrx/templates/comments/_comment_meta.html
+++ b/txrx/templates/comments/_comment_meta.html
@@ -3,6 +3,6 @@
   <a href="javascript:;" onclick="$(this).closest('.comment').toggleClass('collapsed');" class="expand-link"></a>
   <span class="commented_by">{{ comment.user.username }}</span>
   <span class="commented_day">- {{ comment.submit_date|date:"l" }}</span>,
-  <span class="commented_date">{{ comment.submit_date|date:"j F" }}</span>
-  {% trans "at" %} <span class="commented_time">{{ comment.submit_date|date:"H:i" }}<span> 
+  <span class="commented_date">{{ comment.submit_date|date:"F j, Y" }}</span>
+  {% trans "at" %} <span class="commented_time">{{ comment.submit_date|date:"P" }}<span> 
 </p>
