should be done, pending approval from others.

--- a/txrx/templates/sides/_contact_us.html
+++ b/txrx/templates/sides/_contact_us.html
@@ -2,7 +2,7 @@
   <h3 class="block_title">Contact Us</h3>
   <ul class="list-unstyled">
     <li><b>General Inquiry</b></li>
-    <li><a href="mailto:txrxlabs@gmail.com">txrxlabs@gmail.com</a></li>
+    <li>Please contact us using <a href="{% url "contact" %}">this form</a>.</li>
     <li>&nbsp;</li>
     <li><b>Mailing Address</b></li>
     <li>
