--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -13,7 +13,7 @@ simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
   </div>
   <center><button class="btn btn-danger return_policy" onclick="$('.return_policy').toggle();return false;">View our return policy</button></center>
   <div class="alert alert-danger return_policy" style="display:none;">
-    If you can't make a class please contact <a href="mailto:classes@txrxlabs.org">classes@txrxlabs.org</a> to cancel. Cancellations and rescheduling requests must be made at least one week prior to the class for a full refund. Cancellations submitted less than one week before the class will only be refunded if we can fill your slot.
+    {% include "course/_return_policy.html" with format="html" %}
   </div>
 </div>
 <div class="visible-xs hidden-sm hidden-md hidden-lg">
