--- a/course/templates/course/_myclasses.html
+++ b/course/templates/course/_myclasses.html
@@ -1,9 +1,20 @@
 {% if request.user.is_authenticated %}
 <section class="events_box">
+  <div class="alert alert-danger">
+    After you pay for a class it should appear here. If it does not, please email
+    <a href="{% url "contact" %}?slug=enrollment">write us</a> and we'll look into it.
+  </div>
+  {% if not user_sessions.0.past %}
   <h3 class="block_title">Upcoming Classes</h3>
+  {% endif %}
   <ul class="list-unstyled">
     {% for session in user_sessions %}
     {% ifchanged session.past %} {% if session.past %}
+  </ul>
+  {% if not forloop.first %}
+  <p class="alert alert-danger">{% include "course/_return_policy.html" with format="html" %}</p>
+  {% endif %}
+  <ul class="list-unstyled">
     <li><h3 class="block_title margin-top">Past Courses</h3></li>
     {% endif %}{% endifchanged %}
     <li>
@@ -11,16 +22,13 @@
     </li>
     {% endfor %}
   </ul>
-  <div class="alert alert-danger">
-    After you pay for a class it should appear here. If it does not, please email
-    <a href="mailto:txrxlabs@gmail.com">txrxlabs@gmail.com</a>.
-  </div>
 </section>
 {% else %}
-<p class="alert alert-error">
+<p class="alert alert-danger">
   Already signed up?
   <a href="/accounts/login/?next={{ request.path|urlencode }}{{ "#my_classes"|urlencode }}">Log in</a>
   to see your classes.<br />
   If not, an account will be automatically created when you first pay for a class.
 </p>
 {% endif %}
+
