--- a/course/templates/course/instructor_session.html
+++ b/course/templates/course/instructor_session.html
@@ -45,7 +45,7 @@
 {% endif %}
 <div class="col-sm-6">
   <div class="well">
-    <h2>Student List ({{ session.total_students }}/{{ session.section.max_students }} students)</h2>
+    <h2>Student List ({{ session.total_students }}/{{ session.max_students }} students)</h2>
     <ul style="padding-left: 15px;">
       {% for enrollment in session.enrollment_set.all %}
       <li{% if enrollment.quantity != 1 %} data-before="{{ enrollment.quantity }}x "{% endif %}>
