--- a/txrx/templates/email/course_enrollment.html
+++ b/txrx/templates/email/course_enrollment.html
@@ -11,5 +11,4 @@ with {{ enrollment.session.user }}
 on {{ enrollment.session.get_short_dates }}
 {% endfor %}
 
-If you can't make a class please contact classes@txrxlabs.org to cancel. Cancellations and rescheduling requests must be made at least one week prior to the class for a full refund. Cancellations submitted less than one week before the class will only be refunded if we can fill your slot.
-{% endautoescape %}
+{% include "coruse/_return_policy.html" with format="text" %}{% endautoescape %}
