--- a/txrx/templates/email/course_reminder.html
+++ b/txrx/templates/email/course_reminder.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% autoescape off %}
 
-This is a reminder that you have a class ({{ class_time.session.course }}) tomorrow at TXRX Labs. The class starts tomorrow ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }}.
+This is a reminder that you have a class ({{ class_time.session.course }}) tomorrow at TXRX Labs. The class starts tomorrow ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }} {{ session.course.get_location_string }}
 
 {% if session.course.requirements %}Please remember the following requirements: {{ session.course.requirements }}
 
