search works now

--- a/course/templates/course/_filters.html
+++ b/course/templates/course/_filters.html
@@ -1,6 +1,6 @@
 {% verbatim %}
 <div class="list_filter btn-group-vertical">
-  <input type="radio" value="" for="all_subjects" checked="checked" name="subject" />
+  <input type="radio" value="" for="all_subjects" checked="checked" name="subject" id="all_subjects" />
   <label for="all_subjects" class="btn btn-default" ng-click="filterSubjects('')">
     All Subjects
   </label>
