adding gift certificate link

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -75,6 +75,26 @@
           Email me the next time this class is scheduled</button></a>
       {% endif %}
     </p>
+    {% if course.active_sessions %}
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"
+          style="text-align: center;">
+      <input type="hidden" name="cmd" value="_oe-gift-certificate">
+      <input type="hidden" name="business" value="txrxlabs@gmail.com">
+      <input type="hidden" name="lc" value="US">
+      <input type="hidden" name="amount" value="100.00">
+      <input type="hidden" name="currency_code" value="USD">
+      <input type="hidden" name="no_note" value="1">
+      <input type="hidden" name="shopping_url" value="http://txrxlabs.org/classes/">
+      <input type="hidden" name="style_color" value="BLU">
+      <input type="hidden" name="fixed_denom" value="{{ course.fee }}">
+      <input type="hidden" name="currency_code" value="USD">
+      <input type="hidden" name="bn" value="PP-GiftCertBF:btn_giftCC_LG.gif:NonHostedGuest">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_giftCC_LG.gif" border="0"
+             name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+    </form>
+    {% endif %}
+
     <div style="clear: both;"></div>
   </div>
   <div class="col-xs-12 col-sm-4 col-md-3 pull-right" id="side">
