adding google site verification

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -4,6 +4,7 @@
   <head>
     <title>{% block full_title %}{% block title %}{% endblock %} - {{ SITE_NAME }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="google-site-verification" content="5BXTZkZEubZ_azCsu7q469YXtV6tYbDOVeTQ2enG88o" />
     {% block extra_head %}{% endblock %}
     {% include "_styles.html" %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font-awesome-4.2.0/css/font-awesome.min.css" />
