map auto resets

--- a/txrx/templates/dxf.html
+++ b/txrx/templates/dxf.html
@@ -4,20 +4,30 @@
 {% block footer %}{% endblock %}
 
 {% block main %}
-<div class="col-sm-4">
+<div id="map">
+<div class="col-sm-3">
   {% for time,events in event_tuples %}
   <h1>{{ time|date:"P" }}</h1>
-  <ul>
+  <ul class="event_list">
     {% for event in events %}
-    <li style="background:{{ event.room.color }}">{{ event.name }}</li>
+    <li class="room">
+      <span class="room_marker" style="background:{{ event.room.roomgroup.color }}">
+        {{ event.room.map_key }}</span>
+      <span>{{ event.name }}</span>
+    </li>
     {% endfor %}
   </ul>
   {% endfor %}
 </div>
-<div class="col-sm-8">
-  <canvas id="floorplan"></canvas>
+<div class="col-sm-9">
+  <div id="floorplan_wrapper">
+    <canvas id="floorplan"></canvas>
+  </div>
+</div>
 </div>
 <script>
+setTimeout(function() {window.location = window.location;},60*1000);
+
 var LOCATION_DATA = {
   dxf: {{ location.dxf_as_json|safe }}
 }
@@ -26,7 +36,10 @@ var x_max = -Infinity;
 var y_max = -Infinity;
 var x_min = Infinity;
 var y_min = Infinity;
-var scale = 3;
+var scale = 2.8;
+var rotate = true;
+var mirror_x = false, mirror_y = true;
+var fill_images = {};
 
 // calculate bounds
 for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
@@ -40,20 +53,39 @@ for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
   }
 }
 
-var WIDTH = (x_max - x_min)*scale;
-var HEIGHT = (y_max - y_min)*scale;
+var WIDTH = (x_max - x_min)*scale+4;
+var HEIGHT = (y_max - y_min)*scale+2;
+
+if (rotate) {
+  var HEIGHT = (x_max - x_min)*scale;
+  var WIDTH = (y_max - y_min)*scale;
+}
 
 // correct so that it's 0,0 for x_min,y_min
 for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
   var dxf = LOCATION_DATA.dxf[di];
   for (pi=0;pi<dxf.points.length;pi++) {
     p = dxf.points[pi];
-    dxf.points[pi] = [scale*(p[0]-x_min),HEIGHT-scale*(p[1]-y_min)];
+    if (rotate) {
+      dxf.points[pi] = [WIDTH-scale*(p[1]-y_min),scale*(p[0]-x_min)];
+    } else {
+      dxf.points[pi] = [scale*(p[0]-x_min),HEIGHT-scale*(p[1]-y_min)];
+    }
+    if (mirror_x) { dxf.points[pi][0] = WIDTH - dxf.points[pi][0]; }
+    if (mirror_y) { dxf.points[pi][1] = HEIGHT - dxf.points[pi][1]; }
+  }
+}
+
+function draw () {
+  for (var ri=0;ri<rooms.length;ri++) {
+    rect(rooms[ri],context);
   }
 }
 
 // create rooms
 var rooms = [];
+var floorplan_wrapper = document.getElementById('floorplan_wrapper');
+var room_map = {};
 for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
   var dxf = LOCATION_DATA.dxf[di];
   var x_max = -Infinity;
@@ -67,6 +99,12 @@ for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
     y_max = Math.max(y_max,p[1]);
     y_min = Math.min(y_min,p[1]);
   }
+  if (dxf.room && dxf.room.fill && !fill_images[dxf.room.fill]) {
+    var img = document.createElement('img');
+    img.src = dxf.room.fill;
+    fill_images[dxf.room.fill] = img;
+    $(img).load(draw);
+  }
   rooms.push({
     id: dxf.id,
     x: x_min,
@@ -74,27 +112,43 @@ for (var di=0;di<LOCATION_DATA.dxf.length;di++) {
     w: x_max-x_min,
     h: y_max-y_min,
     color: dxf.room?dxf.room.color:"white",
+    fill: dxf.room?dxf.room.fill:null,
     stroke: "black"
   });
+  if (dxf.room && dxf.room.in_calendar) {
+    var color = dxf.room.color || 'white';
+    var room_marker = document.createElement('div');
+    room_marker.style.backgroundColor = color;
+    room_marker.className = 'room_marker';
+    room_map[color] = room_map[color] || [];
+    room_map[color].push(dxf);
+    room_marker.innerHTML = dxf.room.map_key;
+    room_marker.style.left = (x_max+x_min)/2+"px";
+    room_marker.style.top = (y_max+y_min)/2+"px";
+    room_marker.title = dxf.room.name;
+    floorplan_wrapper.appendChild(room_marker);
+  }
 }
 
 var canvas = document.getElementById("floorplan");
-canvas.width = WIDTH;
-canvas.height = HEIGHT;
+canvas.width = WIDTH+2;
+canvas.height = HEIGHT+2;
 var context = canvas.getContext("2d");
+
+draw();
 
 function rect(r,ctx) {
   ctx.beginPath();
   ctx.rect(r.x,r.y,r.w,r.h);
   ctx.fillStyle = r.color;
+  if (r.fill) {
+    pattern = ctx.createPattern(fill_images[r.fill],'repeat');
+    ctx.fillStyle = pattern;
+  }
   ctx.fill();
   ctx.lineWidth = 1;
   ctx.strokeStyle = r.stroke;
   ctx.stroke();
-}
-
-for (var ri=0;ri<rooms.length;ri++) {
-  rect(rooms[ri],context);
 }
 
 function findRoom(e) {
