--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -7,7 +7,7 @@
 {% block head %}
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
 <script src="{{ STATIC_URL }}js/ng-infinite-scroll.js"></script>
-<script src="{{ STATIC_URL }}classes.json"></script>
+<script src="{{ STATIC_URL }}classes.json?v={% now "ymd_his" %}"></script>
 {% endblock %}
 {% block extrajs %}
 <script src="{{ STATIC_URL }}js/course.js"></script>
