evaluation questions are now optional by course

--- a/course/templates/course/evaluation_form.html
+++ b/course/templates/course/evaluation_form.html
@@ -18,7 +18,8 @@
     {{ field }}
     {{ field.label_tag }}
     {% elif field|is_select %}
-    {{ field.label_tag }}
+    {% if not forloop.first %}<hr/>{% endif %}
+    {{ field.label_tag }}&nbsp; &nbsp;
     {{ field }}
     {% else %}
     {{ field }}
