adding social links back on

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -123,6 +123,7 @@
       {% endif %}
       {% endif %}
     </div>
+    {% include "_social.html" with thing=course %}
     {% comment %}
     <center>
       <span class="st_facebook_large" displayText="Facebook"></span>
