--- a/txrx/static/less/thing.less
+++ b/txrx/static/less/thing.less
@@ -24,3 +24,21 @@
     white-space: nowrap;
   }
 }
+
+@size: 40px;
+.social_links {
+  .popup {
+    border-radius: 5px;
+    color: white;
+    display: inline-block;
+    font-size: 20px;
+    height: @size;
+    line-height: @size;
+    text-align: center;
+    width: @size;
+    &.pinterest { background: #cc2127; }
+    &.twitter { background: #55ACEE }
+    &.facebook { background: #3B5998; }
+    &.google-plus { background: #dd4b39; }
+  }
+}
