--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="5BXTZkZEubZ_azCsu7q469YXtV6tYbDOVeTQ2enG88o" />
     {% block extra_head %}{% endblock %}
     {% include "_styles.html" %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font-awesome-4.2.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
     <script type="text/javascript">
       {% if settings.DEBUG %}
       var _NOTIFY_URL = "http://dev.txrxlabs.org:8009/tx/rx/ipn/handler/"
